Updated img2 size on about me page to fix spacing on size2 class.

--- a/styles.css
+++ b/styles.css
@@ -83,7 +83,7 @@ footer h3 {
   display: flex;
   justify-items: space-around;
   margin: 50px;
-  height: 600px;
+  height: 800px;
 }
 
 .img1 {
